force-app/main/default/objects/leadScoring__LeadScoringRule__c/fields/leadScoring__Campaign__c.field-meta.xml
<CustomField>
    <fullName>leadScoring__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selecting a campaign limits the rule to fire only for members of this campaign.  Leaving this blank selects all campaigns.</description>
    <inlineHelpText>Leave blank to select all campaigns</inlineHelpText>
    <label>Filter By Campaign (optional):</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Lead Scoring Rules</relationshipLabel>
    <relationshipName>Lead_Scoring_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>