force-app/main/default/objects/leadScoring__LeadScoringRule__c/validationRules/leadScoring__No_Commas.validationRule-meta.xml
<ValidationRule>
    <fullName>leadScoring__No_Commas</fullName>
    <active>true</active>
    <description>Disallows comma&#39;s in Value as my code doesn&#39;t support them</description>
    <errorConditionFormula>OR(contains( leadScoring__Value__c, &quot;,&quot;) , contains( leadScoring__Value__c, &quot;;&quot;))</errorConditionFormula>
    <errorMessage>Unfortunately, you cannot use a comma or semicolon for either multiple values or numbers. Please remove any commas and semicolons, and if desired, create a second rule for additional criteria.</errorMessage>
</ValidationRule>