force-app/main/default/objects/leadScoring__LeadScoringRule__c/validationRules/leadScoring__No_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>leadScoring__No_Type</fullName>
    <active>true</active>
    <description>Errors if Type is not selected or == --None--</description>
    <errorConditionFormula>ISPICKVAL(leadScoring__Type__c,&#39;&#39;)||ISPICKVAL(leadScoring__Type__c,&#39;--None--&#39;)</errorConditionFormula>
    <errorDisplayField>leadScoring__Type__c</errorDisplayField>
    <errorMessage>You must select a Type such as Lead or Campaign Member</errorMessage>
</ValidationRule>