force-app/main/default/objects/leadScoring__LeadScoringRule__c/validationRules/leadScoring__NullPoints.validationRule-meta.xml
<ValidationRule>
    <fullName>leadScoring__NullPoints</fullName>
    <active>true</active>
    <description>Errors if Score is set to null</description>
    <errorConditionFormula>isnull( leadScoring__Score_Change__c ) || isBlank(leadScoring__Score_Change__c)</errorConditionFormula>
    <errorMessage>You must enter a value for Points.  

Note you can enter negative values to decrease the lead score if criteria is met.</errorMessage>
</ValidationRule>