force-app/main/default/objects/leadScoring__LeadScoringRule__c/validationRules/leadScoring__Rule_field_operator_are_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>leadScoring__Rule_field_operator_are_valid</fullName>
    <active>true</active>
    <description>Checks that the rule has a valid field &amp; operator</description>
    <errorConditionFormula>ISNULL(leadScoring__Field_Name__c)  ||leadScoring__Field_Name__c==&#39;&#39; || ISNULL(text(leadScoring__Operator__c )) || ISNULL(text(leadScoring__Type__c)) || ISNULL(leadScoring__Value__c)  || leadScoring__Value__c==&#39;&#39;</errorConditionFormula>
    <errorMessage>You must select a field, operator, and value before saving.  Blank or null values are not supported as valid values.</errorMessage>
</ValidationRule>