force-app/main/default/objects/leadScoring__LeadScoringRule__c/listViews/leadScoring__Active_Rules.listView-meta.xml
<ListView>
    <fullName>leadScoring__Active_Rules</fullName>
    <columns>NAME</columns>
    <columns>leadScoring__Type__c</columns>
    <columns>leadScoring__Field_Label__c</columns>
    <columns>leadScoring__Campaign__c</columns>
    <columns>leadScoring__Operator__c</columns>
    <columns>leadScoring__Value__c</columns>
    <columns>leadScoring__Score_Change__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leadScoring__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Rules</label>
</ListView>